# document-analyzer

./: .gitignore  Makefile  README.md
Sanctum/Models/: AppState.swift
Sanctum/Sanctum/: ContentView.swift  SanctumApp.swift
Sanctum/Sanctum.xcodeproj/: project.pbxproj
Sanctum/Sanctum.xcodeproj/project.xcworkspace/xcuserdata/will.xcuserdatad/: UserInterfaceState.xcuserstate
Sanctum/Sanctum.xcodeproj/xcuserdata/will.xcuserdatad/xcschemes/: xcschememanagement.plist
Sanctum/SanctumTests/: SanctumTests.swift
Sanctum/SanctumUITests/: SanctumUITests.swift  SanctumUITestsLaunchTests.swift
Sanctum/Services/: BridgeTypes.swift  DocumentService.swift  ModelManager.swift  OCRService.swift
Sanctum/Views/: ChatView.swift  DropZoneView.swift  LibraryView.swift  ModelDownloadView.swift  OnboardingView.swift  SettingsView.swift
SanctumApp/: ContentView.swift  Sanctum-Bridging-Header.h
SanctumApp/Models/: AppState.swift
SanctumApp/SanctumFFITest/: main.swift
SanctumApp/Services/: DocumentService.swift  ModelManager.swift
SanctumApp/Views/: LibraryView.swift  OnboardingView.swift
sanctum-bridge/: sanctum_core.h
sanctum-core/: Cargo.toml  build.rs  cbindgen.toml
sanctum-core/src/: lib.rs
sanctum-core/src/chunker/: splitter.rs
sanctum-core/src/document/: docx.rs  mod.rs  pdf.rs  text.rs
sanctum-core/src/embeddings/: fastembed_backend.rs  mod.rs  store.rs
sanctum-core/src/inference/: engine.rs  llama_backend.rs  mod.rs
sanctum-core/src/pipeline/: mod.rs
scripts/: build-rust.sh  cmake-wrapper.sh  embed-libs.sh
