[package]
name = "sanctum-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "sanctum_core"
crate-type = ["staticlib", "cdylib"]

[dependencies]
lopdf = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rayon = "1.8"
anyhow = "1.0"
thiserror = "1.0"

[build-dependencies]
cbindgen = "0.27"
