[package]
name = "sanctum-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "sanctum_core"
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
# Document parsing
lopdf = "0.34"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async / parallelism
tokio = { version = "1", features = ["full"] }
rayon = "1.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# LLM inference (optional, requires cmake + C++ compiler)
llama-cpp-2 = { version = "0.1.79", optional = true }
encoding_rs = { version = "0.8", optional = true }

# Text embeddings (optional, bundles ONNX runtime)
fastembed = { version = "4", optional = true }

[build-dependencies]
cbindgen = "0.27"

# Feature flags: build with or without ML dependencies.
# Use --no-default-features --features stub for fast iteration without ML.
[features]
default = ["stub"]
ml = ["llama-cpp-2", "encoding_rs", "fastembed"]
stub = []

[[bin]]
name = "sanctum-test"
path = "src/bin/test_pipeline.rs"
